# timsync

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: build_main.yml
action/: entrypoint.sh
docs/: processor_design.md
example/: .timsyncignore  README.md  _config.yml  test_basic.md  test_custom_helpers.md  test_file_reference.md  test_include.md  test_other_file.md  test_task_import.md  test_themes.md
example/_helpers/: hello.rhai
example/_templates/: test_include.md
example/styles/: test_theme.scss
example/tasks/: task1.task.yml  task1.yml  task2_from_file.task.yml
example/testdir/: test.md
example/testdir_include/: test1.md  test2.md
src/: config.rs  main.rs
src/commands/: init.rs  sync.rs  target.rs
src/project/: markdown_document.rs  mod.rs  project.rs
src/util/: mod.rs  tim_client.rs
timsync/: Cargo.toml
timsync/src/: main.rs
timsync/src/commands/: init.rs  mod.rs  sync.rs  target.rs
timsync/src/processing/: markdown_processor.rs  mod.rs  prepared_document.rs  prepared_markdown.rs  processors.rs  style_theme_processor.rs  task_processor.rs  tim_document.rs
timsync/src/project/: config.rs  global_ctx.rs  ignore_file.rs  markdown_document.rs  mod.rs  project.rs
timsync/src/project/files/: css_file.rs  markdown_file.rs  mod.rs  project_files.rs  util.rs  yaml_file.rs
timsync/src/templating/: ext_context.rs  ext_render_with_context.rs  mod.rs  tim_handlebars.rs  util.rs
timsync/src/templating/helpers/: area.rs  docsettings.rs  file.rs  gen_par_id.rs  include.rs  mod.rs  ref_area.rs  task.rs  task_id.rs  url_for.rs
timsync/src/util/: json.rs  mod.rs  path.rs  templating.rs  tim_client.rs
